--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 1.11
           cache: maven
@@ -27,5 +27,6 @@ jobs:
       - name: Maven Package
         run: mvn -B clean package -DskipTests
       - name: xml test
-        run: mvn -B package --file pom.xml
-        
+        run: mvn -B package --file pom.xml        
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@v1
