--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,12 +14,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: set up JDK 11
+      - uses: actions/checkout@v4
+      - name: Set up JDK 11 for x64
         uses: actions/setup-java@v3
         with:
-          java-version: 1.11
-          cache: maven
+          java-version: '11'
+          distribution: 'temurin'
+          architecture: x64
       - name: Validate
         run: mvn validate
       - name: Test
@@ -30,3 +31,9 @@ jobs:
         run: mvn -B package --file pom.xml        
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@v1
+      - run: mvn --batch-mode --update-snapshots verify
+      - run: mkdir staging && cp target/*.jar staging
+     - uses: actions/upload-artifact@v3
+       with:
+         name: Package
+         path: staging
