--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,9 +28,10 @@ jobs:
       - name: Maven Package
         run: mvn -B clean package -DskipTests
       - name: xml test
-        run: mvn -B package --file pom.xml        
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@v1
+        run: mvn -B package --file pom.xml
+#  dependency not work
+#      - name: Update dependency graph
+#        uses: advanced-security/maven-dependency-submission-action@v1
       - run: mvn --batch-mode --update-snapshots verify
       - run: mkdir staging && cp target/*.jar staging
       - uses: actions/upload-artifact@v3
