Switch to psql, add bootstrap js

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 
-upload.path=/tmp/uploads
+upload.path=/tmp/pizza1/uploads
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
@@ -16,11 +16,12 @@ spring.mail.username=alex123@i.ua
 spring.mail.password=12345678
 spring.mail.port=465
 spring.mail.protocol=smtps
-mail.debug=false
+mail.debug=true
 
 recaptcha.secret=6LduQVoUAAAAACpkNtp9c5WWgyGENzIxZqF9SbZL
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 
-hostname=192.168.0.107
+server.port=9000
+hostname=localhost:${server.port}
